fix jumping

--- a/src/modules/trading/components/trading--wrapper/trading--wrapper.styles.less
+++ b/src/modules/trading/components/trading--wrapper/trading--wrapper.styles.less
@@ -45,6 +45,7 @@
       height: 56px;
       justify-content: center;
       padding: 1.125rem 0;
+      position: relative;
       width: 100%;
     }
   }
@@ -60,9 +61,9 @@
 .TradingWrapper__underline__buy,
 .TradingWrapper__underline {
   border-radius: 100px;
+  bottom: 14px;
   margin-top: 0.25rem;
   position: absolute;
-  top: 5%;
   transform: matrix(1, 0, 0, -1, 0, 0);
   width: 5rem;
 
